tests/semantic_cases/invalid/writeint_string_literal.ob0
(* INVALID: WriteInt builtin receives string literal instead of integer expression *)
MODULE Main;
BEGIN
  WriteInt("Hello")
END Main.
